# watermarked_docs

./: .env-example  .gitignore  CriarImagem.py  Dockerfile  ImagemModels.py  Pessoa.py  README.md  docker-compose.yml  enviar_email.py  marca_dagua.py  pyproject.toml  requirements.txt  telegram_bot.py
